--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 <body>
     <h1>Hello from HTML</h1>
     <h2>Hello from CSS</h2>
+
+    <table>
+        <tr>
+            <th>s.no</th>
+            <th>date</th>
+            <th>task</th>
+            <th>link</th>
+            <th>remarks</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>29-05-2023</td>
+            <td>created my first html page</td>
+            <td>https://sarayuarramshetty.github.io/</td>
+            <td>first task done.</td>
+        </tr>
+    </table>
+
     <script src="site.js"></script>
 </body>
 </html>
