--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             <th>remarks</th>
         </tr>
         <tr>
+            <th>1</th>
+            <th>29-05-2023</th>
+            <th>Case Insensitive Palindrome</th>
+            <th>https://ideone.com/pU66FC</th>
+            <th>first task done</th>
+        </tr>
+        <tr>
+            <th>2</th>
+            <th>29-05-2023</th>
+            <th>Check Anagrams</th>
+            <th>https://ideone.com/E1wiSd</th>
+            <th>first day task</th>
+        </tr>
+        <tr>
             <td>1</td>
             <td>29-05-2023</td>
             <td>created my first html page</td>
