--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="site.css">
 </head>
+<script>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</script>
 <body>
     <h1>Hello from HTML</h1>
     <h2>Hello from CSS</h2>
@@ -20,18 +26,18 @@
             <th>remarks</th>
         </tr>
         <tr>
-            <th>1</th>
-            <th>29-05-2023</th>
-            <th>Case Insensitive Palindrome</th>
-            <th>https://ideone.com/pU66FC</th>
-            <th>first task done</th>
+            <td>1</th>
+            <td>29-05-2023</td>
+            <td>Case Insensitive Palindrome</td>
+            <td>https://ideone.com/pU66FC</td>
+            <td>first task done</td>
         </tr>
         <tr>
-            <th>2</th>
-            <th>29-05-2023</th>
-            <th>Check Anagrams</th>
-            <th>https://ideone.com/E1wiSd</th>
-            <th>first day task</th>
+            <td>2</td>
+            <td>29-05-2023</td>
+            <td>Check Anagrams</td>
+            <td>https://ideone.com/E1wiSd</td>
+            <td>first day task</td>
         </tr>
         <tr>
             <td>1</td>
