--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <td>2</td>
-            <td>29-05-2023</td>
+            <td>30-05-2023</td>
             <td>Check Anagrams</td>
             <td>https://ideone.com/E1wiSd</td>
             <td>first day task</td>
@@ -40,6 +40,27 @@
             <td>created my first html page</td>
             <td>https://sarayuarramshetty.github.io/</td>
             <td>first task done.</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>1-05-2023</td>
+            <td>valid paranthesis</td>
+            <td>https://ideone.com/tFyMaC</td>
+            <td>succesfully completed</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>1-05-2023</td>
+            <td>Two Sum</td>
+            <td>https://ideone.com/tyVmDC</td>
+            <td>Wrong Answer</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>1-05-2023</td>
+            <td>MergeTwoSortedLists</td>
+            <td>https://ideone.com/OzubdZ</td>
+            <td>succesfully completed</td>
         </tr>
     </table>
 
