--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <td>1</td>
             <td>29-05-2023</td>
             <td>created my first html page</td>
-            <td>https://sarayuarramshetty.github.io/</td>
+            <td><href="https://sarayuarramshetty.github.io/"> https://sarayuarramshetty.github.io/</href></td>
             <td>first task done.</td>
         </tr>
         <tr>
