updated todays progress

--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
             <td>2</th>
             <td>29-05-2023</td>
             <td>Case Insensitive Palindrome</td>
-            <td>https://ideone.com/pU66FC</td>
+            <td><a href="https://ideone.com/pU66FC">https://ideone.com/pU66FC</a></td>
             <td>first task done</td>
         </tr>
         <tr>
             <td>3</td>
             <td>30-05-2023</td>
             <td>Check Anagrams</td>
-            <td>https://ideone.com/E1wiSd</td>
+            <td><a href="https://ideone.com/E1wiSd">https://ideone.com/E1wiSd</a></td>
             <td>first day task</td>
         </tr>
         <tr>
             <td>4</td>
             <td>1-05-2023</td>
             <td>valid paranthesis</td>
-            <td>https://ideone.com/tFyMaC</td>
+            <td><a href="https://ideone.com/tFyMaC">https://ideone.com/tFyMaC</a></td>
             <td>succesfully completed</td>
         </tr>
         <tr>
             <td>5</td>
             <td>1-05-2023</td>
             <td>Two Sum</td>
-            <td>https://ideone.com/tyVmDC</td>
+            <td><a href="https://ideone.com/tyVmDC">https://ideone.com/tyVmDC</a></td>
             <td>Wrong Answer</td>
         </tr>
         <tr>
             <td>6</td>
             <td>1-05-2023</td>
             <td>MergeTwoSortedLists</td>
-            <td>https://ideone.com/OzubdZ</td>
+            <td><a href="https://ideone.com/OzubdZ">https://ideone.com/OzubdZ</a></td>
             <td>succesfully completed</td>
         </tr>
     </table>
