--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <td>1-05-2023</td>
             <td>Two Sum</td>
             <td><a href="https://ideone.com/tyVmDC">https://ideone.com/tyVmDC</a></td>
-            <td>Wrong Answer</td>
+            <td>succesfully solved</td>
         </tr>
         <tr>
             <td>6</td>
