updated todays progress

--- a/index.html
+++ b/index.html
@@ -43,24 +43,59 @@
         </tr>
         <tr>
             <td>4</td>
-            <td>1-05-2023</td>
+            <td>01-05-2023</td>
             <td>valid paranthesis</td>
             <td><a href="https://ideone.com/tFyMaC">https://ideone.com/tFyMaC</a></td>
             <td>succesfully completed</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>1-05-2023</td>
+            <td>01-05-2023</td>
             <td>Two Sum</td>
             <td><a href="https://ideone.com/tyVmDC">https://ideone.com/tyVmDC</a></td>
             <td>succesfully solved</td>
         </tr>
         <tr>
             <td>6</td>
-            <td>1-05-2023</td>
+            <td>01-05-2023</td>
             <td>MergeTwoSortedLists</td>
             <td><a href="https://ideone.com/OzubdZ">https://ideone.com/OzubdZ</a></td>
             <td>succesfully completed</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>02-06-2023</td>
+            <td>MissingNumber</td>
+            <td><a href="https://ideone.com/xsfqxv">https://ideone.com/xsfqxv</a></td>
+            <td>succesfully completed</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>02-06-2023</td>
+            <td>Reversed linked list</td>
+            <td><a href="https://ideone.com/s5TUED">https://ideone.com/s5TUED</a></td>
+            <td>succesfully completed</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>02-06-2023</td>
+            <td>Contains Duplicates</td>
+            <td><a href="https://ideone.com/XxkgfQ">https://ideone.com/XxkgfQ</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>02-06-2023</td>
+            <td>List Cycle</td>
+            <td><a href="https://ideone.com/SWFhzX">https://ideone.com/SWFhzX</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>02-06-2023</td>
+            <td>Exclusive Product</td>
+            <td><a href="https://ideone.com/SWFhzX">https://ideone.com/SWFhzX</a></td>
+            <td>Wrong Answer</td>
         </tr>
     </table>
 
