--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         </tr>
         <tr>
             <td>4</td>
-            <td>01-05-2023</td>
+            <td>01-06-2023</td>
             <td>valid paranthesis</td>
             <td><a href="https://ideone.com/tFyMaC">https://ideone.com/tFyMaC</a></td>
             <td>succesfully completed</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>01-05-2023</td>
+            <td>01-06-2023</td>
             <td>Two Sum</td>
             <td><a href="https://ideone.com/tyVmDC">https://ideone.com/tyVmDC</a></td>
             <td>succesfully solved</td>
         </tr>
         <tr>
             <td>6</td>
-            <td>01-05-2023</td>
+            <td>01-06-2023</td>
             <td>MergeTwoSortedLists</td>
             <td><a href="https://ideone.com/OzubdZ">https://ideone.com/OzubdZ</a></td>
             <td>succesfully completed</td>
@@ -96,6 +96,20 @@
             <td>Exclusive Product</td>
             <td><a href="https://ideone.com/SWFhzX">https://ideone.com/SWFhzX</a></td>
             <td>Wrong Answer</td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>03-06-2023</td>
+            <td>Number of Islands</td>
+            <td><a href="https://ideone.com/W2OS5p">https://ideone.com/W2OS5p</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>03-06-2023</td>
+            <td>Maximum Depth of Binary Tree</td>
+            <td><a href="https://ideone.com/NekXga">https://ideone.com/NekXga</a></td>
+            <td></td>
         </tr>
     </table>
 
