--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <td>03-06-2023</td>
             <td>Maximum Depth of Binary Tree</td>
             <td><a href="https://ideone.com/NekXga">https://ideone.com/NekXga</a></td>
-            <td></td>
+            <td>Accepted</td>
         </tr>
     </table>
 
