--- a/index.html
+++ b/index.html
@@ -92,24 +92,45 @@
         </tr>
         <tr>
             <td>11</td>
-            <td>02-06-2023</td>
-            <td>Exclusive Product</td>
-            <td><a href="https://ideone.com/a3JsFu">https://ideone.com/a3JsFu</a></td>
-            <td>Wrong Answer</td>
-        </tr>
-        <tr>
-            <td>12</td>
             <td>03-06-2023</td>
             <td>Number of Islands</td>
             <td><a href="https://ideone.com/W2OS5p">https://ideone.com/W2OS5p</a></td>
             <td>Accepted</td>
         </tr>
         <tr>
-            <td>13</td>
+            <td>12</td>
             <td>03-06-2023</td>
             <td>Maximum Depth of Binary Tree</td>
             <td><a href="https://ideone.com/NekXga">https://ideone.com/NekXga</a></td>
             <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>04-06-2023</td>
+            <td>Exclusive Product</td>
+            <td><a href="https://ideone.com/9p35GK">https://ideone.com/9p35GK</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>04-06-2023</td>
+            <td>Sum without using Plus and Minus</td>
+            <td><a href="https://ideone.com/s4zG8L">https://ideone.com/s4zG8L</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>04-06-2023</td>
+            <td>Climbing Stairs</td>
+            <td><a href="https://ideone.com/pJCfs4">https://ideone.com/pJCfs4</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>04-06-2023</td>
+            <td>Reverse Bits</td>
+            <td><a href="https://ideone.com/pnwDuh">https://ideone.com/pnwDuh</a></td>
+            <td>Wrong Answer</td>
         </tr>
     </table>
 
