--- a/usercard.html
+++ b/usercard.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Card1</title>
+    <link rel="stylesheet" href="usercard.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <h2>User Card1</h2>
         <div>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVS1XwYvv5qv2yacRfueVXin9v4JZR4Rd6rH2TwnqQWQ&usqp=CAU&ec=48600112">
