--- a/usercard.html
+++ b/usercard.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <h2>User Card1</h2>
-        <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVS1XwYvv5qv2yacRfueVXin9v4JZR4Rd6rH2TwnqQWQ&usqp=CAU&ec=48600112">
-            <div>
+        <div class="card">
+            <img class ="cardimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVS1XwYvv5qv2yacRfueVXin9v4JZR4Rd6rH2TwnqQWQ&usqp=CAU&ec=48600112">
+            <div class="cardbody">
                 <h1>ABDUL KALAM</h1>
                 <p>Missile Man</p>
             </div>
