--- a/usercard.html
+++ b/usercard.html
@@ -14,7 +14,7 @@
             <img class ="cardimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVS1XwYvv5qv2yacRfueVXin9v4JZR4Rd6rH2TwnqQWQ&usqp=CAU&ec=48600112">
             <div class="cardbody">
                 <h1>ABDUL KALAM</h1>
-                <p>Missile Man</p>
+                <p class="cardbodyDesignation">Missile Man</p>
             </div>
         </div>
     </div>
