--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard 1</a>
+    <a href="usercard2.html">Click here to go to UserCard 2</a>
     <script src="site.js"></script>
 </body>
 </html>
