--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <td>Wrong Answer</td>
         </tr>
     </table>
-    <a href="usercard.html">Click here to go to usercard 1</a>
+    <a href="usercard.html">Click here to go to usercard 1</a><br>
     <a href="usercard2.html">Click here to go to UserCard 2</a>
     <script src="site.js"></script>
 </body>
