--- a/index.html
+++ b/index.html
@@ -132,6 +132,41 @@
             <td><a href="https://ideone.com/pnwDuh">https://ideone.com/pnwDuh</a></td>
             <td>Wrong Answer</td>
         </tr>
+        <tr>
+            <td>17</td>
+            <td>05-06-2023</td>
+            <td>Min Coins to make change</td>
+            <td><a href="https://ideone.com/B3Sk5k">https://ideone.com/B3Sk5k</a></td>
+            <td>Wrong Answer</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>05-06-2023</td>
+            <td>Length of Longest SubStr with Distinct Chars</td>
+            <td><a href="https://ideone.com/KBjB72">https://ideone.com/KBjB72</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>19</td>
+            <td>05-06-2023</td>
+            <td>Group Anagrams</td>
+            <td><a href="https://ideone.com/nl2kWo">https://ideone.com/nl2kWo</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>06-06-2023</td>
+            <td>Count Set Bits</td>
+            <td><a href="https://ideone.com/SNKh5q">https://ideone.com/SNKh5q</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td>06-06-2023</td>
+            <td>Count Bits</td>
+            <td><a href="https://ideone.com/SiUI08">https://ideone.com/SiUI08</a></td>
+            <td>Accepted</td>
+        </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard 1</a><br>
     <a href="usercard2.html">Click here to go to UserCard 2</a>
