updated yesterdays progress

--- a/index.html
+++ b/index.html
@@ -167,6 +167,27 @@
             <td><a href="https://ideone.com/SiUI08">https://ideone.com/SiUI08</a></td>
             <td>Accepted</td>
         </tr>
+        <tr>
+            <td>22</td>
+            <td>07-06-2023</td>
+            <td>Best Time to Buy and Sell Stock</td>
+            <td><a href="https://ideone.com/MJ1W0E">https://ideone.com/MJ1W0E</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>07-06-2023</td>
+            <td>Set Matrix Zeroes</td>
+            <td><a href="https://ideone.com/0FgTJa">https://ideone.com/0FgTJa</a></td>
+            <td>TLE</td>
+        </tr>
+        <tr>
+            <td>24</td>
+            <td>07-06-2023</td>
+            <td>Invert Binary Tree</td>
+            <td><a href="https://ideone.com/2nkOOG">https://ideone.com/2nkOOG</a></td>
+            <td>Accepted</td>
+        </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard 1</a><br>
     <a href="usercard2.html">Click here to go to UserCard 2</a>
