updated todays progress

--- a/index.html
+++ b/index.html
@@ -174,18 +174,19 @@
             <td><a href="https://ideone.com/MJ1W0E">https://ideone.com/MJ1W0E</a></td>
             <td>Accepted</td>
         </tr>
+       
         <tr>
             <td>23</td>
             <td>07-06-2023</td>
-            <td>Set Matrix Zeroes</td>
-            <td><a href="https://ideone.com/0FgTJa">https://ideone.com/0FgTJa</a></td>
-            <td>TLE</td>
+            <td>Invert Binary Tree</td>
+            <td><a href="https://ideone.com/2nkOOG">https://ideone.com/2nkOOG</a></td>
+            <td>Accepted</td>
         </tr>
         <tr>
             <td>24</td>
-            <td>07-06-2023</td>
-            <td>Invert Binary Tree</td>
-            <td><a href="https://ideone.com/2nkOOG">https://ideone.com/2nkOOG</a></td>
+            <td>08-06-2023</td>
+            <td>Set Matrix Zeroes</td>
+            <td><a href="https://ideone.com/AMBF8z">https://ideone.com/AMBF8z</a></td>
             <td>Accepted</td>
         </tr>
     </table>
