--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
             <td>27</td>
             <td>12-06-2023</td>
             <td>Top k frequent elements</td>
-            <td><a href="https://ideone.com/djt9Ro">https://ideone.com/djt9Ro</a></td>
-            <td>Wrong Answer</td>
+            <td><a href="https://ideone.com/XBvPuK">https://ideone.com/XBvPuK</a></td>
+            <td>Accepted</td>
         </tr>
 
     </table>
