--- a/usercard3.html
+++ b/usercard3.html
@@ -17,7 +17,7 @@
                 <p id = "descrip" class="cardbodyDesignation">Aerospace Scientist</p>
             </div>
         </div>
-        <button onclick="flipdata()">Toggle
+        <button onclick="getRandomUser()">Shuffle
         </button>
     </div>
     <script src="usercard3.js"></script>
