13th July progess updated

--- a/index.html
+++ b/index.html
@@ -217,6 +217,27 @@
             <td><a href="https://ideone.com/GkthSr">https://ideone.com/GkthSr</a></td>
             <td>Accepted</td>
         </tr>
+        <tr>
+            <td>29</td>
+            <td>13-06-2023</td>
+            <td>Remove Nth Node from List End</td>
+            <td><a href="https://ideone.com/bDjbFW">https://ideone.com/bDjbFW</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>30</td>
+            <td>13-06-2023</td>
+            <td>isBST</td>
+            <td><a href="https://ideone.com/lnd9Fy">https://ideone.com/lnd9Fy</a></td>
+            <td>Accepted</td>
+        </tr>
+        <tr>
+            <td>31</td>
+            <td>13-06-2023</td>
+            <td>Longest Consecuitive Sequence</td>
+            <td><a href="https://ideone.com/8IxA2t">https://ideone.com/8IxA2t</a></td>
+            <td>Accepted</td>
+        </tr>
 
     </table>
     <a href="usercard.html">Click here to go to usercard 1</a><br>
