extra anglular bracket removed

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <tr>
             <td>32</td>
             <td>14-06-2023</td>
-            <td>Longest Consecuitive Sequence<</td>
+            <td>Longest Consecuitive Sequence</td>
             <td><a href="https://ideone.com/zM7L19">https://ideone.com/zM7L19</a></td>
             <td>Accepted(tried other menthod)</td>
         </tr>
